--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "antd": "^4.17.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hexagon": "^1.1.3",
     "react-router": "^6.0.2",
     "react-router-dom": "^4.2.2",
     "react-scripts": "4.0.3",
